salesforce/force-app/main/default/objects/Browse_Session__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>UTM campaign parameter captured from the visitor's landing URL. Used to join with Campaign_Decode__c for rich campaign context.</description>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>