salesforce/force-app/main/default/objects/Browse_Session__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>UTM medium parameter (e.g. paid-social, cpc, email) from the visitor's landing URL</description>
    <label>UTM Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>