salesforce/force-app/main/default/objects/Browse_Session__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>UTM source parameter (e.g. instagram, google, facebook) from the visitor's landing URL</description>
    <label>UTM Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>